fix: исправлен z-index у header

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -8,11 +8,6 @@
 
   background-color: $color-background-header-and-footer;
 
-  @media (max-width: $width-tablet-wide) {
-    position: fixed;
-    z-index: 10;
-  }
-
   .container {
     @include flex(row, space-between, center);
 
@@ -66,6 +61,11 @@
 
       background-color: $color-background-header-and-footer;
     }
+  }
+
+  @media (max-width: $width-tablet-wide) {
+    position: fixed;
+    z-index: 2;
   }
 
   @media (max-width: $width-desk-narrow) {
